Refactor Code add Datasets generation

--- a/ImageDvs/F2EB.csproj
+++ b/ImageDvs/F2EB.csproj
@@ -69,6 +69,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms.cs" />
+    <Compile Include="Frame_Utils.cs" />
     <Compile Include="F2EB.cs">
       <SubType>Form</SubType>
     </Compile>
